--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -8,31 +8,32 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Content="Create new project" Click="CreateNewClick" Margin="0,10,10,0" HorizontalAlignment="Right" Width="120" Height="30" VerticalAlignment="Top" />
+        <Button Grid.Row="1" Grid.Column="0" Content="Create new project" Click="CreateNewClick" Margin="0,0,10,10" HorizontalAlignment="Right" Width="120" Height="30" VerticalAlignment="Bottom" />
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <ListView Grid.Column="0" x:Name="ProjectsList" SelectionChanged="ProjectsListSelected">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Label Content="{Binding Name}" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <ListView Grid.Column="1" x:Name="LanguageList" MouseDoubleClick="ProjectDoubleClick">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Label Content="{Binding DisplayName}" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>
+        <TextBox Grid.Column="1" Grid.Row="1" x:Name="NewLanguageBox" Margin="0,10,135,10"  HorizontalAlignment="Right" Width="110"  />
+        <Button Grid.Row="1" Grid.Column="1" Content="Add new language" Click="NewLanguageClick" Margin="0,0,10,10" HorizontalAlignment="Right" Width="120" Height="30" VerticalAlignment="Bottom" />
+
+        <ListView Grid.Row="0" Grid.Column="0" x:Name="ProjectsList" SelectionChanged="ProjectsListSelected">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ListView Grid.Row="0" Grid.Column="1" x:Name="LanguageList" MouseDoubleClick="ProjectDoubleClick">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding DisplayName}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Window>
